--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -373,6 +373,7 @@
           /></a>
         </div>
       </div>
+      <div class="custom-cursor"></div>
     </footer>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
