--- a/index-german.html
+++ b/index-german.html
@@ -441,11 +441,17 @@
             <div class="floating-carousel">
               <div class="carousel-inner">
                 <div class="carousel-item">
-                  <img
-                    src="./Projects screenshots/Crazy-Cow-Project.webp"
-                    alt="Projekt 1 Crazy Cow Project"
-                    loading="lazy"
-                  />
+                  <a
+                    href="./Projects/Crazy-Cow/index.html"
+                    aria-label="Crazy Cow JavaScript Projektlink"
+                    target="_blank"
+                  >
+                    <img
+                      src="./Projects screenshots/Crazy-Cow-Project.webp"
+                      alt="Projekt 1 Crazy Cow Project"
+                      loading="lazy"
+                    />
+                  </a>
                   <div class="carousel-item-info">
                     <a
                       href="./Projects/Crazy-Cow/index.html"
@@ -463,11 +469,17 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="./Projects screenshots/Animal-World-Project.webp"
-                    alt="Projekt 2 Animal World Tamaguchi JavaScript"
-                    loading="lazy"
-                  />
+                  <a
+                    href="https://github.com/DraculadyCode/Animal-World"
+                    aria-label="Animal-World Projekt pure JavaScript Link"
+                    target="_blank"
+                  >
+                    <img
+                      src="./Projects screenshots/Animal-World-Project.webp"
+                      alt="Projekt 2 Animal World Tamaguchi JavaScript"
+                      loading="lazy"
+                    />
+                  </a>
                   <div class="carousel-item-info">
                     <a
                       href="https://github.com/DraculadyCode/Animal-World"
@@ -484,11 +496,17 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="./Projects screenshots/Uriya-Private-Teacher-Project.webp"
-                    alt="Projekt 3 Private Teacher Freiberufliche Webseite Uriya Peled"
-                    loading="lazy"
-                  />
+                  <a
+                    href="./Projects/Uriya-Peled-Pivate-Teacher/index.html"
+                    aria-label="Private Teacher Freiberufliche Webseite Uriya Peled Link"
+                    target="_blank"
+                  >
+                    <img
+                      src="./Projects screenshots/Uriya-Private-Teacher-Project.webp"
+                      alt="Projekt 3 Private Teacher Freiberufliche Webseite Uriya Peled"
+                      loading="lazy"
+                    />
+                  </a>
                   <div class="carousel-item-info">
                     <a
                       href="./Projects/Uriya-Peled-Pivate-Teacher/index.html"
@@ -508,11 +526,17 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="./Projects screenshots/Pokemon-Project.webp"
-                    alt="Projekt 4 Pokemon Suche Informationen mit API"
-                    loading="lazy"
-                  />
+                  <a
+                    href="./Projects/Pokemon Project/index.html"
+                    aria-label="Pokémon Information Suchseite Projektlink"
+                    target="_blank"
+                  >
+                    <img
+                      src="./Projects screenshots/Pokemon-Project.webp"
+                      alt="Projekt 4 Pokemon Suche Informationen mit API"
+                      loading="lazy"
+                    />
+                  </a>
                   <div class="carousel-item-info">
                     <a
                       href="./Projects/Pokemon Project/index.html"
@@ -774,6 +798,21 @@
             <div class="tool">
               <div><i class="fa-brands fa-figma" aria-hidden="true"></i></div>
               <div><p>Figma</p></div>
+            </div>
+            <div class="tool">
+              <div>
+                <i
+                  class="fa-solid fa-magnifying-glass-chart"
+                  aria-hidden="true"
+                ></i>
+              </div>
+              <div><p>Google Analytics</p></div>
+            </div>
+            <div class="tool">
+              <div>
+                <i class="fa-brands fa-searchengin" aria-hidden="true"></i>
+              </div>
+              <div><p>Google Search Console</p></div>
             </div>
           </div>
         </div>
