--- a/index.html
+++ b/index.html
@@ -417,11 +417,17 @@
             <div class="floating-carousel">
               <div class="carousel-inner">
                 <div class="carousel-item">
-                  <img
-                    src="./Projects screenshots/Crazy-Cow-Project.webp"
-                    alt="Project 1 Crazy Cow Project"
-                    loading="lazy"
-                  />
+                  <a
+                    href="./Projects/Crazy-Cow/index.html"
+                    aria-label="Crazy Cow JavaScript Project link"
+                    target="_blank"
+                  >
+                    <img
+                      src="./Projects screenshots/Crazy-Cow-Project.webp"
+                      alt="Project 1 Crazy Cow Project"
+                      loading="lazy"
+                    />
+                  </a>
                   <div class="carousel-item-info">
                     <a
                       href="./Projects/Crazy-Cow/index.html"
@@ -438,11 +444,17 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="./Projects screenshots/Animal-World-Project.webp"
-                    alt="Project 2 Animal World Tamaguchi JavaScript"
-                    loading="lazy"
-                  />
+                  <a
+                    href="https://github.com/DraculadyCode/Animal-World"
+                    aria-label="Animal-World project pure JavaScript link"
+                    target="_blank"
+                  >
+                    <img
+                      src="./Projects screenshots/Animal-World-Project.webp"
+                      alt="Project 2 Animal World Tamaguchi JavaScript"
+                      loading="lazy"
+                    />
+                  </a>
                   <div class="carousel-item-info">
                     <a
                       href="https://github.com/DraculadyCode/Animal-World"
@@ -459,11 +471,17 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="./Projects screenshots/Uriya-Private-Teacher-Project.webp"
-                    alt="Project 3 Private Teacher freelance website Uriya Peled"
-                    loading="lazy"
-                  />
+                  <a
+                    href="./Projects/Uriya-Peled-Pivate-Teacher/index.html"
+                    aria-label="Private Teacher freelance website Uriya Peled link"
+                    target="_blank"
+                  >
+                    <img
+                      src="./Projects screenshots/Uriya-Private-Teacher-Project.webp"
+                      alt="Project 3 Private Teacher freelance website Uriya Peled"
+                      loading="lazy"
+                    />
+                  </a>
                   <div class="carousel-item-info">
                     <a
                       href="./Projects/Uriya-Peled-Pivate-Teacher/index.html"
@@ -480,11 +498,17 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="./Projects screenshots/Pokemon-Project.webp"
-                    alt="Project 4 Pokemon Search information with API"
-                    loading="lazy"
-                  />
+                  <a
+                    href="./Projects/Pokemon Project/index.html"
+                    aria-label="Private Teacher freelance website Uriya Peled link"
+                    target="_blank"
+                  >
+                    <img
+                      src="./Projects screenshots/Pokemon-Project.webp"
+                      alt="Project 4 Pokemon Search information with API"
+                      loading="lazy"
+                    />
+                  </a>
                   <div class="carousel-item-info">
                     <a
                       href="./Projects/Pokemon Project/index.html"
@@ -745,6 +769,21 @@
             <div class="tool">
               <div><i class="fa-brands fa-figma" aria-hidden="true"></i></div>
               <div><p>Figma</p></div>
+            </div>
+            <div class="tool">
+              <div>
+                <i
+                  class="fa-solid fa-magnifying-glass-chart"
+                  aria-hidden="true"
+                ></i>
+              </div>
+              <div><p>Google Analytics</p></div>
+            </div>
+            <div class="tool">
+              <div>
+                <i class="fa-brands fa-searchengin" aria-hidden="true"></i>
+              </div>
+              <div><p>Google Search Console</p></div>
             </div>
           </div>
         </div>
