correction of german text

--- a/index-german.html
+++ b/index-german.html
@@ -307,10 +307,9 @@
                   aria-label="Technion, Israeli Institute of Technology in Haifa"
                   >Technion (Israelisches Institut für Technologie)</a
                 >
-                in Haifa abgeschlossen.</span
+                in Haifa studiert.</span
               >
-              Im Jahr 2017 erhielt ich mein Diplom in praktischer
-              Softwaretechnik.
+              Dort erhielt ich 2017 mein Diplom in praktischer Softwaretechnik.
               <br />
               Diese grundlegende Ausbildung vermittelte mir ein solides
               Verständnis der Prinzipien der Softwareentwicklung,
@@ -386,35 +385,35 @@
               ich entweder ein zweimonatiges Praktikum oder eine Festanstellung
               suchen, um meine berufliche Laufbahn zu beginnen.
               <br />
-              Ich interessiere mich insbesondere für Positionen, die sich auf
-              die Front-End-Entwicklung konzentrieren, wo ich meine Fähigkeiten
-              einbringen und von erfahrenen Fachleuten lernen kann.
+              Dabei interessiere ich mich insbesondere für Positionen, die sich
+              auf die Front-End-Entwicklung konzentrieren, wo ich meine
+              erworbenen Fähigkeiten einbringen und von erfahrenen Fachleuten
+              lernen kann.
               <br />
-              Darüber hinaus bin ich offen für das Erlernen neuer Technologien
-              und Techniken im Bereich der Webentwicklung, um meine Fähigkeiten
-              zu erweitern und mich an die sich entwickelnde Branche anzupassen.
+              Mir ist bewusst, dass sich die Branche stetig weiterentwickelt.
+              Darum bin ich auf der Suche nach Weiterbildungen oder
+              Gelegenheiten für Selbststudium.
               <br />
               <br />
               <span class="title-span">Portfolio und Kontakt </span>
-              <span class="link-span"
-                >Sie können mein Portfolio von Webentwicklungsprojekten
+              <span class="link-span">
                 <a
                   href="./Pages/portfolio-german.html"
                   target="_blank"
                   aria-label="Siehe Kathrin Peleds Portfolio"
-                  ><b>hier</b>.</a
+                  ><b>Hier</b></a
                 >
+                gelangen sie zu meiem Portfolio von Webentwicklungsprojekten.
               </span>
               <span class="link-span"
-                >Ich lade potenzielle Partner und Arbeitgeber ein, mich
+                >Gerne lade ich potenzielle Partner und Arbeitgeber ein,
                 <a
                   href="./Pages/contact-german.html"
                   target="_blank"
                   aria-label="Kontaktieren Sie Kathrin Peled"
-                  ><b>zu kontaktieren</b></a
+                  ><b>Kontakt mit mir</b></a
                 >
-                für Möglichkeiten, die mit meinen Fähigkeiten und Bestrebungen
-                übereinstimmen.</span
+                aufzunehmen.</span
               >
 
               <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
