corrections of navbar

--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -186,8 +186,11 @@
         <nav>
           <ul>
             <li class="dropdown">
-              <a href="../index.html#about" aria-label="About">About</a>
+              <a href="../index.html" aria-label="About">Home</a>
               <ul class="dropdown-portfolio">
+                <li>
+                  <a href="../index.html#about" aria-label="About">About</a>
+                </li>
                 <li>
                   <a
                     href="./resume-english.html"
