--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -118,13 +118,13 @@
       async
     ></script>
 
-        <!-- ShareThis script -->
-        <script
-        type="text/javascript"
-        src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
-        async="async"
-      ></script>
-      
+    <!-- ShareThis script -->
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
+      async="async"
+    ></script>
+
     <!-- Preload main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
@@ -183,15 +183,18 @@
         <nav>
           <ul>
             <li class="dropdown">
-              <a href="../index-german.html#about" aria-label="About"
-                >Über mich</a
-              >
+              <a href="../index-german.html" aria-label="Homepage">Home</a>
               <ul class="dropdown-portfolio">
+                <li>
+                  <a href="../index-german.html#about" aria-label="About"
+                    >Über mich</a
+                  >
+                </li>
                 <li>
                   <a
                     href="./resume-german.html"
                     aria-label="Ineractive Resume Book"
-                    >Mein Lebenslauf</a
+                    >Lebenslauf</a
                   >
                 </li>
                 <li>
