--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -188,15 +188,19 @@
         <nav>
           <ul>
             <li class="dropdown">
-              <a href="../index-german.html#about" aria-label="About"
-                >Über mich</a
-              >
+              <a href="../index-german.html" aria-label="Homepage">Home</a>
+
               <ul class="dropdown-portfolio">
+                <li>
+                  <a href="../index-german.html#about" aria-label="About"
+                    >Über mich</a
+                  >
+                </li>
                 <li>
                   <a
                     href="./resume-german.html"
                     aria-label="Ineractive Resume Book"
-                    >Mein Lebenslauf</a
+                    >Lebenslauf</a
                   >
                 </li>
                 <li>
