--- a/index.html
+++ b/index.html
@@ -179,8 +179,11 @@
         <nav>
           <ul>
             <li class="dropdown">
-              <a href="../index.html#about" aria-label="About">About</a>
+              <a href="../index.html" aria-label="Homepage">Home</a>
               <ul class="dropdown-portfolio">
+                <li>
+                  <a href="../index.html#about" aria-label="Aboutk">About Me</a>
+                </li>
                 <li>
                   <a
                     href="./Pages/resume-english.html"
