--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -202,7 +202,7 @@
                   <a
                     href="./resume-german.html"
                     aria-label="Ineractive Resume Book"
-                    >Lebenslauf</a
+                    >Mein Lebenslauf</a
                   >
                 </li>
                 <li>
