--- a/index-german.html
+++ b/index-german.html
@@ -204,7 +204,7 @@
                   <a
                     href="./Pages/resume-german.html"
                     aria-label="Ineractive Resume Book"
-                    >Lebenslauf</a
+                    >Mein Lebenslauf</a
                   >
                 </li>
                 <li>
