--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -194,7 +194,7 @@
                   <a
                     href="./resume-german.html"
                     aria-label="Ineractive Resume Book"
-                    >Lebenslauf</a
+                    >Mein Lebenslauf</a
                   >
                 </li>
                 <li>
