correction of sitemap

--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -361,7 +361,7 @@
       </div>
       <div class="sharethis-sticky-share-buttons"></div>
     </main>
-    <footer>
+    <!-- <footer>
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
@@ -374,7 +374,7 @@
         </div>
       </div>
       <div class="custom-cursor"></div>
-    </footer>
+    </footer> -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <!-- Async or defer for external scripts -->
