correction of dropdown menu for touch devices

--- a/index.html
+++ b/index.html
@@ -841,6 +841,7 @@
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/carousel.js" async></script>
     <script src="./Scripts/Cursor.js" async></script>
+    <script src="./Scripts/dropdown-menu.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
