correction of dropdown menu for touch devices

--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -519,6 +519,7 @@
     </footer>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
+    <script src="../Scripts/dropdown-menu.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
