--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1776,6 +1776,7 @@
     <script src="../Scripts/toggle-english.js" async></script>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
+    <script src="../Scripts/dropdown-menu.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
