--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1816,6 +1816,7 @@
     <script src="../Scripts/portfolio-sortment.js" async></script>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
+    <script src="../Scripts/dropdown-menu.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
