--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -945,6 +945,8 @@
     <script src="../Scripts/resume.js" async></script>
     <script src="../Scripts/transfer-resume.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
+    <script src="../Scripts/dropdown-menu.js" async></script>
+
     <!-- Async or defer for external scripts -->
     <script>
       window.dataLayer = window.dataLayer || [];
