--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -389,6 +389,7 @@
     </footer>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
+    <script src="../Scripts/dropdown-menu.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
