--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -951,6 +951,7 @@
     <script src="../Scripts/resume.js" async></script>
     <script src="../Scripts/transfer-resume.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
+    <script src="../Scripts/dropdown-menu.js" async></script>
 
     <!-- Async or defer for external scripts -->
 
