correction of sitemap

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     />
 
     <!-- Canonical link to the current webpage to avoid duplicate content issues -->
-    <link rel="canonical" href="https://draculady.de/" />
+    <link rel="canonical" href="https://draculady.de/index.html" />
 
     <!-- Preload Font Awesome stylesheet -->
     <link
