contact form without labels

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -280,7 +280,6 @@
                     method="POST"
                     aria-label="Contact Form"
                   >
-                    <label for="name">Your Name:</label> <br />
                     <input
                       type="text"
                       id="name"
@@ -288,10 +287,9 @@
                       required
                       autocomplete="name"
                       aria-required="true"
-                      placeholder="Enter your name"
+                      placeholder=" Your Name"
                     />
                     <br />
-                    <label for="email">Your Email:</label> <br />
                     <input
                       type="email"
                       id="email"
@@ -299,17 +297,16 @@
                       required
                       autocomplete="email"
                       aria-required="true"
-                      placeholder="Enter your email"
+                      placeholder="Your Email"
                     />
                     <br />
-                    <label for="message">Your Message:</label> <br />
                     <textarea
                       id="message"
                       name="message"
                       required
                       autocomplete="message"
                       aria-required="true"
-                      placeholder="Type your message here"
+                      placeholder="Your Message"
                     ></textarea>
                     <br />
                     <button type="submit" aria-label="Send your message">
