--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -281,7 +281,6 @@
                     method="POST"
                     aria-label="Contact Form"
                   >
-                    <label for="name">Ihr Name:</label> <br />
                     <input
                       type="text"
                       id="name"
@@ -289,10 +288,9 @@
                       required
                       autocomplete="name"
                       aria-required="true"
-                      placeholder="Enter your name"
+                      placeholder="Ihr Name"
                     />
                     <br />
-                    <label for="email">Ihre E-Mail:</label> <br />
                     <input
                       type="email"
                       id="email"
@@ -300,17 +298,16 @@
                       required
                       autocomplete="email"
                       aria-required="true"
-                      placeholder="Enter your email"
+                      placeholder="Ihre E-Mail"
                     />
                     <br />
-                    <label for="message">Ihre Nachricht:</label> <br />
                     <textarea
                       id="message"
                       name="message"
                       required
                       autocomplete="message"
                       aria-required="true"
-                      placeholder="Type your message here"
+                      placeholder="Ihre Nachricht"
                     ></textarea>
                     <br />
                     <button type="submit" aria-label="Send your message">
