contact page upgrade

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -319,6 +319,129 @@
           </div>
         </div>
       </section>
+      <section id="social-media-3d" aria-labelledby="social-medias-title 3d">
+        <div class="container">
+          <div class="social-media-3d-menu">
+            <ul>
+              <li
+                data-text="Facebook"
+                class="facebook-list-item"
+                style="--i: -3; --clr: #1877f2"
+              >
+                <a
+                  href="https://www.facebook.com/profile.php?id=61563925780935"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Facebook profile of Kathrin Peled, opens in a new tab"
+                  ><span>
+                    <i
+                      class="fa-brands fa-facebook"
+                      aria-hidden="true"
+                      title="Facebook: https://www.facebook.com/profile.php?id=61563925780935"
+                    ></i></span
+                  >Facebook</a
+                >
+              </li>
+              <li
+                data-text="Telegram"
+                class="telegram-list-item"
+                style="--i: -2; --clr: #0088cc"
+              >
+                <a
+                  href="https://t.me/Draculady"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Telegram handle @Draculady, opens in a new tab"
+                  ><span>
+                    <i
+                      class="fab fa-telegram"
+                      aria-hidden="true"
+                      title="Telegram: @Draculady
+                  "
+                    ></i></span
+                  >Telegram</a
+                >
+              </li>
+              <li
+                data-text="Email"
+                class="email-list-item"
+                style="--i: -1; --clr: #d93025"
+              >
+                <a
+                  href="mailto: draculadycode@gmail.com"
+                  aria-label="Email me at draculadycode@gmail.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><span
+                    ><i
+                      class="fa-regular fa-envelope"
+                      aria-hidden="true"
+                      title="Email: draculadycode@gmail.com"
+                    ></i></span
+                  >Email</a
+                >
+              </li>
+              <li
+                data-text="Twitter"
+                class="twitter-list-item"
+                style="--i: 0; --clr: #1da1f2"
+              >
+                <a
+                  href="https://x.com/DraculadyKath"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Twitter X page of DraculadyKath, opens in a new tab"
+                  ><span>
+                    <i
+                      class="fa-brands fa-x-twitter"
+                      title="Twitter/X: https://x.com/DraculadyKath"
+                      aria-hidden="true"
+                    ></i></span
+                  >Twitter</a
+                >
+              </li>
+              <li
+                data-text="LinkedIn"
+                class="linkedIn-list-item"
+                style="--i: 1; --clr: #0a66c2"
+              >
+                <a
+                  href="https://www.linkedin.com/in/kathrin-peled-draculady/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="LinkedIn profile of Kathrin Peled, opens in a new tab"
+                  ><span
+                    ><i
+                      class="fa-brands fa-linkedin"
+                      aria-hidden="true"
+                      title="LinkedIn: https://www.linkedin.com/in/kathrin-peled-draculady/"
+                    ></i></span
+                  >LinkedIn</a
+                >
+              </li>
+              <li
+                data-text="GitHub"
+                class="github-list-item"
+                style="--i: 2; --clr: #181717"
+              >
+                <a
+                  href="https://github.com/DraculadyCode"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="GitHub profile of DraculadyCode, opens in a new tab"
+                  ><span>
+                    <i
+                      class="fa-brands fa-github"
+                      aria-hidden="true"
+                      title="GitHub: https://github.com/DraculadyCode"
+                    ></i></span
+                  >GitHub</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
       <section id="social-medias" aria-labelledby="social-medias-title">
         <div class="container">
           <div class="h2-title">
