--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -130,7 +130,7 @@
     />
     <link rel="stylesheet" href="../Styles/sitemap.css" />
     <link rel="stylesheet" href="../Styles/style.css" />
-
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
     <!-- Google Analytics tag -->
     <script
       async
@@ -359,6 +359,13 @@
           </div>
         </div>
       </div>
+      <div class="share-social-media">
+        <div class="sharing-menu">
+          <div class="sharing-toggle">
+            <i class="fa-solid fa-share-nodes"></i>
+          </div>
+        </div>
+      </div>
       <div class="sharethis-sticky-share-buttons"></div>
     </main>
     <!-- <footer>
@@ -377,6 +384,7 @@
     </footer> -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
+    <script src="../Scripts/sharing-toggle.js" async></script>
     <!-- Async or defer for external scripts -->
 
     <script>
