sharing toggle styles

--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -132,6 +132,8 @@
     <!-- Preloading main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
 
     <!-- Google Analytics tag -->
     <script
