--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -139,7 +139,10 @@
 
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
+    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+
     <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
 
     <!-- Google Tag Manager for tracking -->
     <script
