--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -135,6 +135,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/style_resume.css" as="style" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
+    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
 
     <!-- Google Analytics tracking script -->
     <script
