--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -135,6 +135,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
+    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
 
     <!-- Google Tag Manager for tracking -->
     <script
