--- a/index-german.html
+++ b/index-german.html
@@ -138,9 +138,11 @@
 
     <!-- Preload custom stylesheet for the page -->
     <link rel="preload" href="./Styles/style.css" as="style" />
+    <link rel="preload" href="./Styles/sharingToggle.css" as="style" />
 
     <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="./Styles/style.css" />
+    <link rel="stylesheet" href="./Styles/sharingToggle.css" />
 
     <!-- Google Analytics tag -->
     <script
