--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -144,6 +144,8 @@
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
 
     <!-- Google Analytics tag -->
     <script
