--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -135,6 +135,8 @@
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
 
     <!-- Google Analytics tracking script -->
     <script
