--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -138,9 +138,11 @@
 
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
+    <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
 
     <!-- Custom stylesheet for the portfolio -->
     <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="stylesheet" href="../Styles/sharingToggle.css" />
 
     <!-- Google Analytics tag -->
     <script
