sharing toggle styles

--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -441,6 +441,25 @@
                   >GitHub</a
                 >
               </li>
+              <li
+                data-text="Xing"
+                class="xing-list-item"
+                style="--i: 3; --clr: #007a33"
+              >
+                <a
+                  href="https://www.xing.com/profile/Kathrin_Peled/web_profiles"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Xing profile of Kathrin Peled Draculady, opens in a new tab"
+                  ><span>
+                    <i
+                      class="fa-brands fa-xing"
+                      aria-hidden="true"
+                      title="Xing: https://www.xing.com/profile/Kathrin_Peled/web_profiles"
+                    ></i></span
+                  >Xing</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -599,6 +618,34 @@
                         aria-hidden="true"
                       ></i>
                     </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.xing.com/profile/Kathrin_Peled/web_profiles"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Xing profile of Kathrin Peled Draculady, opens in a new tab"
+                    >
+                      <i
+                        class="fa-brands fa-xing"
+                        aria-hidden="true"
+                        title="Xing: https://www.xing.com/profile/Kathrin_Peled/web_profiles"
+                      ></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://discord.com/users/draculadycode"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Discord profile of Kathrin Peled Draculady, opens in a new tab"
+                    >
+                      <i
+                        class="fa-brands fa-discord"
+                        aria-hidden="true"
+                        title="Discord: https://discord.com/users/draculadycode"
+                      ></i
+                    ></a>
                   </li>
                 </ul>
               </div>
